jenkins/jenkins-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: jenkins
spec:
  hosts:
    - "jenkins.loadtest.e2eelab.org"
  gateways:
    - public-gateway
  http:
  - route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
